# meetmewhen

./: .gitignore  Cargo.toml  Dockerfile  README.md  REQUIREMENTS.md  docker-compose.yml  next.config.js  package-lock.json  package.json
api/: Cargo.toml  Dockerfile  build.rs
api/migrations/2023-04-15-025105_basic_events/: down.sql  up.sql
api/migrations/2023-04-19-133648_availability/: down.sql  up.sql
api/migrations/2023-04-21-101942_exclusive_respondent_names/: down.sql  up.sql
api/protos/: availabilities.proto  basic_event.proto  common.proto  health.proto
api/src/: lib.rs  main.rs
api/src/api/: availabilities.rs  basic_event.rs  health.rs  mod.rs
api/src/database/: mod.rs  schema.rs
api_types/: Cargo.toml
api_types/src/: lib.rs
api_types/src/availabilities/: create.rs  delete.rs  get.rs  mod.rs  update.rs
api_types/src/basic_event/: create.rs  get.rs  mod.rs
client/: Cargo.toml  build.rs
client/src/: lib.rs
client/src/api/: availabilities.rs  basic_event.rs  health.rs  mod.rs
client/src/app/: health.rs  mod.rs  root.rs
client/src/app/atoms/: button.rs  mod.rs  select.rs
client/src/app/atoms/input/: mod.rs  text.rs
client/src/app/components/: calendar.rs  mod.rs  respondents.rs  time_legend.rs  time_selector.rs  week.rs
client/src/app/components/week/: day.rs  mod.rs
client/src/app/pages/: event.rs  index.rs  mod.rs  not_found.rs
csr/: Cargo.toml  Dockerfile  index.html  package-lock.json  tailwind.config.js
csr/src/: main.rs
databases/docker/: Cargo.toml
databases/lambda/: Cargo.toml
databases/local/: Cargo.toml
prisma/: schema.prisma
prisma/migrations/20230603160638_/: migration.sql
servers/docker/: Cargo.toml
servers/lambda/: Cargo.toml
servers/local/: Cargo.toml
src/app/: actions.ts  globals.css  layout.tsx  page.tsx
src/app/event/[id]/: page.tsx
src/components/: expanding-input.tsx
ssr/: Cargo.toml  Dockerfile  build.rs
ssr/src/: endpoints.rs  main.rs  renderer.rs
toolbox/: Cargo.toml
