[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
tonic-web = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3", default-features = false, features = ["cors"] }
http = "0.2"

[build-dependencies]
tonic-build = "0.9"