[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.20"
# tonic-web-wasm-client = { version = "0.3", optional = false }
tonic-web-wasm-client = "0.3"
prost = "0.11.5"
tonic = { version = "0.8", default-features = false, features = ["prost", "codegen"] }
web-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[build-dependencies]
tonic-build = { version = "0.8", default-features = false, features = ["prost"] }