[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
api_types = { path = "../api_types" }

yew = "0.20"
yew-router = "0.17"
# tonic-web-wasm-client = { version = "0.3", optional = false }
tonic-web-wasm-client = "0.3"
prost = "0.11.5"
tonic = { version = "0.8", default-features = false, features = ["prost", "codegen"] }
web-sys = { version = "0.3", features = ["Event", "EventTarget"] }
time = "0.3"
log = "0.4"
wasm-bindgen = "0.2"
prokio = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3"

[build-dependencies]
tonic-build = { version = "0.8", default-features = false, features = ["prost"] }